--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -28,7 +28,7 @@
 \affil[2]{Second affiliation address}
 \affil[3]{Third affiliation address}
 
-\setcounter{page}{54}
+%\setcounter{page}{54}
 
 \begin{document}
 \maketitle  
@@ -53,18 +53,19 @@
 
     \textit{How do we estimate interactions between plants in natural and complex communities ?}
 
+    Begin with the network introduction.
+
     There is a growing demand for plant networks because they're 1) useful to understand ecosys functioning and 2) plants are important systems to know more about. Multiple species.    
 
-    Building plant networks is difficult, and a major challenge to understand how plant networks influence biodiversity is characterising interactions as they can't be directly observed. A popular way around this is to build cooccurrence networks. 
-
-    Though cooc networks may be useful for understanding association patterns, they are not proxies for interaction networks. 
-
-    'Real' interactions can be measured from growth rate / fecundity / growth data. That can be complicated when there's a lot of species involved. 
-
+    Building plant networks is difficult, and a major challenge to understand how plant networks influence biodiversity is characterising interactions as they can't be directly observed. A popular way around this is to build cooccurrence networks. Though cooc networks may be useful for understanding association patterns, they are not proxies for interaction networks. 'Real' interactions can be measured from growth rate / fecundity / growth data. That can be complicated when there's a lot of species involved. 
     We propose a model framework that makes this easier.
  
   
     Non trophic interactions are usually neglected in ecological networks or lumped into compartments representing other primary producers of basal resources (Baiser et al., 2013; van der Zee et al., 2016; Borst et al., 2018 - in Ellison 2019).   
+
+    Species interaction networks are fundamentally different to co-occurrence networks as they reflect per-capita effects on species' growth rates, rather than spatial association patterns. 
+    Co-occurrence networks however, benefit from being easy to implement and can naturally handle a large number of species. There are in fact many  packages available in R to calculate these networks, with methods ranging from simple (cooccur package) to extremely complex (e.g. D Harris). 
+    There are few however, published plant population dynamic models which are explicitely developped to include many species.
 
     \begin{itemize}
         \item Kokkoris2002 =  Competition / species interactions can contribute to diversity (read more)
@@ -179,19 +180,12 @@
 \section{Results}
 
 
-    The model framework we present here quantifies pair-wise interaction strengths between species from diverse single-trophic community data. Several aspects of our model and its implementation allow us to better capture complex features of plant communities compared to co-occurrence networks. 
+    The model framework we present here quantifies pair-wise interaction strengths between species from diverse single-trophic community data. Several aspects of our model and its implementation allow us to better capture complex features of plant communities compared to co-occurrence networks. Firstly, interactions are estimated from species effects on each other's growth rates and thus capture how interactions may directly affect species abundances, rather than spatial association patterns. Moreover, our framework is flexible to the inclusion of many species, as with co-occurrence networks. Two features make this possible: the response-effect model to estimate unobserved interactions, and a Bayesian implementation to deal with many parameters. The response-effect model allows us to deal with a small number of unobserved interactions by relaxing assumptions for those cases and estimating more general 'effect' and 'response' parameters from  pair-wise interactions which are observed. The Bayesian implementation means that parameters are estimated using MCMC algortihms, which can estimate more parameters than with more frequentist approaches. This approach also returns parameter estimates as prosterior distributions rather than simple mean and standard deviations. By having access to the full distribution of likely values for every interaction, we can draw samples of likely networks from these distributions and thus incorporate some measure of variation and uncertainty around interaction values pretty easily. \\
 
-    Interaction strengths are given as posterior distributions, which can be sampled to recreate a range of probable networks representing the community, thus capturing some measure of uncertainty around interaction values. 
 
-    The resulting species interaction networks are fundamentally different to co-occurrence networks as they reflect per-capita effects on species' growth rates, rather than spatial association patterns. 
-    Co-occurrence networks however, benefit from being easy to implement and can naturally handle a large number of species. There are in fact many  packages available in R to calculate these networks, with methods ranging from simple (cooccur package) to extremely complex (e.g. D Harris). 
-    There are few however, published plant population dynamic models which are explicitely developped to include many species. Two features of our framework make this possible: the joint model, and our Bayesian implementation.
-    joint model - unobserved interactions 
-    bayesian - many params + measure of uncertainty
+    Our method also breaks from traditional plant population dynamic models by allowing facilitation, whereas they usually only model competition. Facilitation is very important to community dynamics but is not explicitely measured or recognised in these traditional approaches. Many spatial association methods do not recognise facilitative interactions either (I think? e.g. the cooccur package?). Thus our method allows us to investigate the effects of competition and facilitation at the same time, and across many species. \\
 
-    Our method also breaks from traditional plant pop dyn models by allowing facilitation, which is important but not explicitely recognised.
-
-    With our method, -> way for empiricists to estimate interaction networks and have access to a bunch of network theory tools to better understand their community and the species within it. 
+    Our methods makes it simpler for empiricists to estimate diverse interaction networks by providing an alternative to co-occurrence methods. Overall, our framework paints a more realistic picture of plant communities and their interactions: diversity is included, multiple interaction types can occur and unobserved interactions are not simply assigned to '0'. In turn, this allows empiricists to access network tools to better understand the plants and ecosystems they study, as well as non-trophic communities in general.\\
 
 
 
@@ -209,19 +203,26 @@
 \section{Discussion}
 
     
-    The model framework presented here allows the estimation of species-rich interaction matrices from plant community data. 
+    The model framework presented here allows the estimation of species-rich interaction matrices from plant community data. Our paper makes it easier for empiricists to characterise species interactions in their systems, as usually they need to come up with complex models to resolve all interactions. We provide a model for annual plant systems and a method which can be extended to any horizontal community for which there is a model of population dynamics - you will just need to adapt the model and scaling of interactions.\\
 
-    Make it easier for empiricists to characterise species interactions in their system
-    Typically experimenters who want to build measure these things need to come up with complex models to resolve all interactions. If your data is plant annuals you can just plug your data right in. If it's a different type of species, you just need to adapt the population model and scaling of the interactions to work with your particular system. 
+    The interaction matrices this model estimates are fundamentally different to association networks, which are a common alternative to estimating interactions in species-rich communities. Our estimates are direct per-capita effects of one species on another so have direct consequences on population abundances. Our model and it's implementation can estimate these interactions for many species, as well as include intraspecific interactions and facilitation. Our framework thus produces a better representation of the complexity of real plant communities and their interactions. This then allows us to do a bunch of cool stuff to a) better understand plant communities in general and b) better understand a specific plant system. Though our method still requires a lot of data, people interested in applications of this model (conservationsts and ecosystem management) are likely to have access to the kind of monitoring data which is needed. 
 
-    - deals with many species + measure of uncertainty
-    - deals with some unobserved interactions
-    - derived from pop dynamic models so direct consequences on pop abundances
-    - deals with facilitation 
+    % Make it easier for empiricists to characterise species interactions in their system. Typically experimenters who want to build measure these things need to come up with complex models to resolve all interactions. If your data is plant annuals you can just plug your data right in. If it's a different type of species, you just need to adapt the population model and scaling of the interactions to work with your particular system. 
 
-    -> better representation of complexity of real plant communities
+    % - deals with many species + measure of uncertainty
+    % - deals with some unobserved interactions
+    % - derived from pop dynamic models so direct consequences on pop abundances
+    % - deals with facilitation 
+
+    % -> better representation of complexity of real plant communities
+
+    \subsection{Limitations}
         
-        In turn, this complex picture allows us to do a bunch of cool stuff. In other systems for examples, networks ahve allowed us to do ...... Here for example, we can identify species which occupy important roles in the community. For example keystone species, foundation species, etc, mabe describe exactly how? Keystone species have wide effects so species that have really strong competitive or facilitative effects. Some species would be important because they connect really widely to others ? (I don't remember their name). 
+        Though our framework does provide a way of estimating interactions between species which are not observed to cooccur, care should be taken that these unobserved interactions do not dominate the network. The method we propose uses observed interactions to then estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones. \\
+
+        Our model framework is aimed to helping empiricists who want to estimate interactions for non-trophic communities - but these empiricists will still require large amounts of data. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify the full parameter space is sampled. I wouldn't recommend fewer than 20 observations per focal species, and I still recommend grouping species which appear very very rarely. More data will also give more precise estimates of interaction strengths. 
+
+        The kind of people or organisations who this paper might be useful for though are perhaps more likely than most to have access to this kind of data, given that many conservation or ecosystem management initiatives involve regular monitoring of the abundances of different species in the system. 
 
     % Why do we want to do that? 
     % 1. to learn more about plant communities in general 
@@ -229,12 +230,12 @@
 
     \subsection{Understanding community diversity and stability}
 
-        Quantifying the interaction networks of plant communities allows us to explore how the mechanisms maintaining diversity and stability operate across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability (Barabas 2017 NEE) and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive of facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species: weak interactions between species indicates they are not sharing or competing for many resources, and occupy different niche spaces in the community (ref??). Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to continued coexistence in plant communities.
+        Quantifying the interaction networks of plant communities allows us to explore how the mechanisms maintaining diversity and stability operate across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability (Barabas 2017 NEE) and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive of facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species: weak interactions between species indicates they are not sharing or competing for many resources, and occupy different niche spaces in the community (ref??). Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to continued coexistence in plant communities.\\
 
-        A key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised (Bruno Callaway 2003) but there is still little consensus on how they may affect coexistence between species. Recent work suggests facilitation may be common (ref) and may harm or benefit species diversity and stability depending on the circumstances (ref). Our framework provides a mean to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity. 
+        A key feature of our model framework is the inclusion of facilitative interactions, which have long been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised (Bruno Callaway 2003) but there is still little consensus on how they may affect coexistence between species. Recent work suggests facilitation may be common (ref) and may harm or benefit species diversity and stability depending on the circumstances (ref). Our framework provides a mean to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity. \\
      
         Ultimately, quantifying plant interaction networks allows us to apply tools from network theory which will help us understand not only how plants interact, but also how these interactions drive community-level patterns of abundance and diversity. Several metrics already exist for describing network structure such as weighted connectance or relative intransitivity, though these are fewer than for trophic or bipartite networks. Adapting measures of nestedness or modularity for example to non-sparse networks (as plant communties typically are) would allow us to further characterise how interactions and species are organised. These metrics all relate to different aspects of stability and could greatly inform us on how diversity is maintained between plants. 
-        Further avenues also exist to characterise how species tend to interact. Network motifs for example are the units which makes up a network, such as a three species food chain or an intransitive interaction loop. These motifs have important biological meaning. We could extend the network motif approach to signle-trophic networks to characterise the kind of roles that species can occupy in relation to the wider plant community (Cirtwill ref!)
+        Further avenues also exist to characterise how species tend to interact. Network motifs for example are the units which makes up a network, such as a three species food chain or an intransitive interaction loop. These motifs have important biological meaning. We could extend the network motif approach to single-trophic networks to characterise the kind of roles that species can occupy in relation to the wider plant community (Cirtwill ref!).\\
 
 
     % 2) to learn more about your plant community specifically 
@@ -245,30 +246,22 @@
 
     \subsection{Applications to ecosystem management}
 
-        Interaction networks provide a unique lense with which to examine an ecological community. Specifically, interaction networks allows us to determine important species which have particular effects on the wider community, as well as examine how species of interest are affected by the whole community. These two aspects are particularly important to ecosystem management and conservation because they allow us to establish management strategies which are adapted to the community and species involved, and which acknowledge the interlinkedness of species and their effects on one another. 
+        Interaction networks provide a unique lense with which to examine an ecological community. Specifically, interaction networks allows us to determine important species which have particular effects on the wider community, as well as examine how species of interest are affected by the whole community. These two aspects are particularly important to ecosystem management and conservation because they allow us to establish management strategies which are adapted to the community and species involved, and which acknowledge the interlinkedness of species and their effects on one another. \\
 
-        Certain species play important roles in the community which can be deduced from their position in the interaction network. Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species (Mills et al. 1993), often leading to secondary extinctions when they are removed from a network. In single-trophic systems, keystone species could be identified by their high in-strength ... Foundation species on the other hand ... Foundation species can be identified by high abundance, connectedness and predominantly facilitative interactions.  
+        Certain species play important roles in the community which can be deduced from their position in the interaction network. Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species (Mills et al. 1993), often leading to secondary extinctions when they are removed from a network. In single-trophic systems, keystone species could be identified by their high in-strength ... Foundation species on the other hand ... Foundation species can be identified by high abundance, connectedness and predominantly facilitative interactions.  \\
 
-        Network approaches can also be used to determine how specific species are integrated within the community. We can determine whether invasive species are competing with or impacting many of the native species, or if they are disproportionally affecting a handful of species. Weak interactions between invasive and native species would indicate low resource sharing, such that the invasive species are probably exploiting 'empty' niche space rather taking over the niche space of natives. Threatened species would also benefit from this type of analysis, as we could deduce which other community members are hindering or helping their recovery. This is especially relevant for rare species, as recent work suggests they are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants. If that is indeed the case, quantifying the interaction networks would help us identify which other species may be involved in 'proping up' the species of interest. 
+        Network approaches can also be used to determine how specific species are integrated within the community. We can determine whether invasive species are competing with or impacting many of the native species, or if they are disproportionally affecting a handful of species. Weak interactions between invasive and native species would indicate low resource sharing, such that the invasive species are probably exploiting 'empty' niche space rather taking over the niche space of natives. Threatened species would also benefit from this type of analysis, as we could deduce which other community members are hindering or helping their recovery. This is especially relevant for rare species, as recent work suggests they are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants. If that is indeed the case, quantifying the interaction networks would help us identify which other species may be involved in 'proping up' the species of interest. \\
 
         Overall, quantifying the community interaction network allows us to direct conservation and management efforts in ways which work with the community, rather than against it.
 
 
-    \subsection{Limitations}
-        
-        Though our framework does provide a way of estimating interactions between species which are not observed to cooccur, care should be taken that these unobserved interactions do not dominate the network. The method we propose uses observed interactions to then estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones. \\
-
-        Our model framework is aimed to helping empiricists who want to estimate interactions for non-trophic communities - but these empiricists will still require lare amounts of data. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify the full parameter space is sampled. I wouldn't recommend fewer than 20 observations per focal species, and I still recommend grouping species which appear very very rarely. More data will also give more precise estimates of interaction strengths. 
-
-        The kind of people or organisations who this paper might be useful for though are perhaps more likely than most to have access to this kind of data, given that many conservation or ecosystem management initiatives involve regular monitoring of the abundances of different species in the system. 
-
-
     \subsection{Future research directions}
 
+    
     - adding trait or phylogeny data, for example by informing priors with trait or phylogeny distance matrix
-    ie improving our estimates 
-    - improving our knowledge of networks, developing tools for plant networks and tools that can deal with non-sparse networks, competitive and facilitative interactions 
-    - integrate with trophic networks (which appear to be sensitive to producer/plant network structure!)
+    ie. improving our estimates \\
+    - improving our knowledge of networks, developing tools for plant networks and tools that can deal with non-sparse networks, competitive and facilitative interactions \\
+    - integrate with trophic networks (which appear to be sensitive to producer/plant network structure!)\\
 
     
 
