added intro outline notes

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -50,8 +50,21 @@
 
 
 \section{Introduction}
+    
+    1. Networks are important tools for understanding ecosystems: functioning, stability, diversity + roles of species. Non-trophic interactions however are often omitted from networks! 
 
-    \textit{How do we estimate interactions between plants in natural and complex communities ?}
+
+    2. We need networks for plants but unlie common 'network' ecosystems, we can't observe interactions -> they have to be deduced.
+    
+    3. A common way to do this is with species association networks because they require 'simple' data, can include lots of species, and there's lots of published methods out there (papers and packages of varying complexity). Unfortunately, cooc networks don't capture interactions (even when they're super complicated?!)
+
+    4. Another way is to estimate from growth data. This is the approach plant people take, using population dynamic models. This is often done a low diversity scales (few species) because we need a lot of replication! 
+    You can use observation data but still need complex models for many interactions! Current models only estimate alphas between a few species and keep them competitive. 
+
+
+    5. We describe a modelling framework + implementation which ....
+
+
 
     Begin with the network introduction.
 
